chore: update index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 
 <body>
+  <h1> Hi! </h1>
+  kill me plz, am tired
+  <h1> Bye </h1>
   <script type="module">
     // Importing WASM as a JS module requires us to call an init function provided by the default export.
     // This is planned to be changed in the future.
