--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <h1> Hi! </h1>
-  <p style="font-size: 2pc;"> kill me plz, am tired </p>
+  <p style="font-size: 300px; color: transparent;"> kill me plz, am tired </p>
   <h1> Bye </h1>
   <script type="module">
     // Importing WASM as a JS module requires us to call an init function provided by the default export.
